--- a/HTML/LoginPage.html
+++ b/HTML/LoginPage.html
@@ -1,1 +1,13 @@
-
+<!-- css is used through an external stylesheet - no css is used through internal sylesheet -->
+<!DOCTYPE html>
+<html>
+    <body
+      <div> <!-- divider indicates the written elements of the header -->
+        <h1>Tutor Match</h1>
+        <h3>Find Specialized and Accessible Tutors <br> Today that Match Your Schedule</h3>
+            <!-- The above lines are centered using css -->
+      </div> <!-- end of heading divider -->
+    </body> <!-- end of body -->
+  
+  
+</html>
